--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
 				url('assets/font/NFLRedZone.ttf')  format('truetype'), /* Safari, Android, iOS */
 				url('webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
 		}
+		@font-face {
+			font-family: 'NFL';
+			src: url('webfont.eot'); /* IE9 Compat Modes */
+			src: url('webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+				url('webfont.woff') format('woff'), /* Modern Browsers */
+				url('assets/font/NFL.ttf')  format('truetype'), /* Safari, Android, iOS */
+				url('webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+		}
 	</style>
 
 <link href="assets/css/style.css" rel="stylesheet">
